--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Prueba de Git - github</title>
 </head>
 <body>
-    
+    <h1>Inicio</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae minima pariatur officiis, voluptatem est facere, laboriosam, 
+        quod natus quia aspernatur soluta a nobis sequi quam ratione. Corporis delectus earum explicabo.
+    </p>
 </body>
 </html>
