--- a/nosotros.html
+++ b/nosotros.html
@@ -7,6 +7,11 @@
     <title>Noostros</title>
 </head>
 <body>
+    <h1>Nosotros</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam similique tenetur mollitia deserunt totam, neque ut ratione nulla, porro beatae 
+        itaque autem consequuntur quae quos quis corporis! Ullam, quibusdam minima!
+    </p>
     
 </body>
-</html>
+</html>git
