--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,5 +12,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae minima pariatur officiis, voluptatem est facere, laboriosam, 
         quod natus quia aspernatur soluta a nobis sequi quam ratione. Corporis delectus earum explicabo.
     </p>
+
+    <h2>Prueba con vsc</h2>
 </body>
 </html>
